<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ReminderListActivity!</string>
    <string name="app_name">Task Reminder</string>
    <string name="no_reminders">No Reminders</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="confirm">Confirm</string>
    <string name="menu_insert">Add reminder</string>
    <string name="menu_delete">Delete reminder</string>
    <string name="task_saved_message">task_saved_message</string>

</resources>